[project]
name = "libretv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "beautifulsoup4>=4.13.4",
    "brotli>=1.1.0",
    "flask-cors>=5.0.1",
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "protobuf>=6.30.2",
    "requests>=2.32.3",
    "retrying>=1.3.4",
    "tqdm>=4.67.1",
]
